Bug 66469 - Text changing (with animation) not saved without exit editing mode / text box or go to Slide Show
Summary: Text changing (with animation) not saved without exit editing mode / text box...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Justin L
URL:
Whiteboard: BSA target:5.3.0 target:5.2.0.1 targe...
Keywords:
: 89465 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-01 19:45 UTC by Christian Hoffmann
Modified: 2017-05-19 10:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Hoffmann 2013-07-01 19:45:33 UTC
Problem description:
LibreOffice Impress discards changes to documents without notice in certain circumstances. It happens when the object in question is part of a custom animation and if no other content is modified before saving.

This is actually really annoying as it may lead to whole paragraphs of text getting lost or to other corrections not being saved (and as such, errors or typos getting re-introduced without noticing).

Steps to reproduce:
1. Create an empty presentation
2. Add some text such as "Test0"
3. Select the entered text (or the parent text box) and add a custom animation (doesn't matter which, but let's say "Appear")
4. Save and close the document
5. Open it again and modify the text (Make "Test0" read "Text1")
6. Without editing anything else, click save (or press Ctrl+S) and close the presentation
7. Re-open again and notice that the last change did not get saved (the page still reads "Test0")

Current behavior:
The most recent change done to any animated item is not saved, unless something else is modified afterwards.
Above test case shows "Test0".


Expected behavior:
Everything which is visible on-screen should be saved to the file and should look the same after re-opening the file.
Above test cases should yield "Test1".

Further information:
- The list of custom animations does not update properly either (i.e. when "Test0" is changed to "Test1", the animation list still says "Test0" unless something else is edited or focus is switched to another slide).
- While I am not familiar with the LibreOffice code, it looks like some event is not fired in this case which would usually be responsible for updating internal state at several places (internal ODF representation, custom animation list pane).
- Removing the custom animation and repeating the test (changing content, saving, reloading) will still show the bug! The bug only vanishes if the document is re-opened after the custom animation has been removed.


Environment:
- This was first noticed on Kubuntu 13.04 with the bundled libreoffice-4.0.2.2
- also reproduced on: Ubuntu 13.04, bundled libreoffice-4.0.2.2, different machine
- also reproduced on: Ubuntu 13.04, libreoffice.org's 4.0.4.2 packages (LibreOffice_4.0.4.2_Linux_x86-64_deb)
- also reproduced on: Ubuntu 13.04, libreoffice.org's 4.1.0.1 packages (LibreOffice_4.1.0.1_Linux_x86-64_deb)

(all tests on x86_64)

Please let me know if I can supply you with any more debugging information.
Operating System: Ubuntu
Version: 4.0.4.2 release
Comment 1 Christian Hoffmann 2013-07-02 16:16:07 UTC
- also reproduced on: Fedora Core, bundled libreoffice-3.5.7.2, different machine
Comment 2 retired 2014-01-16 18:55:02 UTC
Christian, is this bug still valid / reproducible with the latest pre-release 4.2.0.2: http://www.libreoffice.org/download/pre-releases/

Please also try resetting your user profile and let us know if that helps: https://wiki.documentfoundation.org/UserProfile

Should this be still reproducible for you with the latest LO release please set this bug back to UNCONFIRMED. Should this issue be solved set it to WORKSFORME.

Setting to NEEDINFO until more detail is provided.
Comment 3 Christian Hoffmann 2014-01-16 21:14:45 UTC
Thanks for your reply.

This is still reproducible
- on Ubuntu 13.10 w/ LibreOffice 4.1.3.2 (from Ubuntu)
- on Ubuntu 13.10 w/ LibreOffice 4.2.0.2 (official debs [1])

A fresh LibreOffice profile (~/.libreoffice* and ~/.config/libreoffice* moved out of the way) has been used for the second test.

Do you need any additional information?

[1] http://download.documentfoundation.org/libreoffice/testing/4.2.0/deb/x86_64/LibreOffice_4.2.0.2_Linux_x86-64_deb.tar.gz
Comment 4 A (Andy) 2014-10-17 22:15:03 UTC
Reproducible with LO 4.3.2.2 (Win 8.1)
Comment 5 ign_christian 2014-10-18 10:09:04 UTC
Also reproduced with LO 3.6.7.2, 3.3.0.4 - Ubuntu 12.04 x86. Same with AOO 4.1.1, seems inherited from OOO.

Possibly not filesave problem since the text in 'Custom Animation' pane not changed after text modification, unless we click anywhere to exit editing box or firing Slide Show.
Comment 6 QA Administrators 2015-12-20 16:08:26 UTC Comment hidden (obsolete)
Comment 7 Christian Hoffmann 2015-12-20 22:01:24 UTC
I can confirm that this bug is still present in LibreOffice 5.0.4.2 (Build ID: 5.0.4.2 Arch Linux build-1, Locale: de-DE (de_DE.UTF-8), current Arch Linux w/ Kernel 4.2.5-1-ARCH).

The reproduce instructions from comment #0 still apply.
Comment 8 Justin L 2016-05-31 14:08:57 UTC
*** Bug 89465 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2016-06-01 09:13:05 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c36b560c8d7acf5259d2a8f97317f303667140a3

tdf#66469 impress: update outline text before saving

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-06-01 13:19:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=940880a6822bc688193a5a667f5d2104ed477906&h=libreoffice-5-2

tdf#66469 impress: update outline text before saving

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-06-01 17:46:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1245bead3a68c9495a870f194f3c523b3b78cf87&h=libreoffice-5-1

tdf#66469 impress: update outline text before saving

It will be available in 5.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.