tdf#66469 impress: update outline text before saving

When custom annimations are present, any changes to the
Outline text were not updated unless EndTextEdit was called.
Ending Text Editing would cancel the cursor location, so
simply sync the changes and then save.

Change-Id: Iaf3b29e64d08c9d2fb6c18d7b0e3b3cc89c16d7f
Reviewed-on: https://gerrit.libreoffice.org/25739
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit c36b560c8d7acf5259d2a8f97317f303667140a3)
Reviewed-on: https://gerrit.libreoffice.org/25761
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 940880a6822bc688193a5a667f5d2104ed477906)
Reviewed-on: https://gerrit.libreoffice.org/25780
(cherry picked from commit 1245bead3a68c9495a870f194f3c523b3b78cf87)